lang - refs #8 added header title and download cv

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,3 +1,5 @@
 {
-  "welcome.label": "Welcome2222"
+  "welcome.label": "Welcome2222",
+  "header.title": "Francesco Vicidomini",
+  "header.download.cv": "Download CV"
 }
