--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -1,3 +1,5 @@
 {
-  "welcome.label": "Benvenuto 2222"
+  "welcome.label": "Benvenuto 2222",
+  "header.title": "Francesco Vicidomini",
+  "header.download.cv": "Download CV"
 }
