lang - refs #8 added key for section skills

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,5 +3,29 @@
   "welcome.subtitle": "EN Bene, ecco quello che c'è da sapere ...",
   "welcome.aboutme": "<p>EN Sono uno sviluppatore a cui piace sviluppare per lo più con linguaggi e/o framework front-end. Sto lavorando principalmente con Angular 2+ e ho sviluppato questo sito in React giusto per cambiare un pò.</p><p>Lavoro in NTT DATA a Napoli dal giugno 2020, questa è stata la mia prima esperienza lavorativa da informatico.</p><p>Prima di cominciare a lavora ho studiato Informatica presso l'Università degli Studi di Salerno dove ho conseguito Laurea Magistrale.</p><p>Attualmente gli argomenti che mi interessano di più sono le metodologie Agile, in particolare il framework Scrum, e lo sviluppo front-end cercando di non fossilizzarmi troppo sul codice ma cercando di curare anche la UI e la UX di ciò che sviluppo.</p>",
   "header.title": "Francesco Vicidomini",
-  "header.download.cv": "Download CV"
+  "header.download.cv": "Download CV",
+  "skills.soft01": "EN Proattività",
+  "skills.soft02": "EN Problem solving",
+  "skills.soft03": "EN Team work",
+  "skills.soft04": "EN Comunicazione",
+  "skills.soft05": "EN Conseguire obiettivi",
+  "skills.soft06": "EN Simpatia",
+  "skills.soft01.desc": "EN Descrizione Proattività",
+  "skills.soft02.desc": "EN Descrizione Problem solving",
+  "skills.soft03.desc": "EN Descrizione Team work",
+  "skills.soft04.desc": "EN Descrizione Comunicazione",
+  "skills.soft05.desc": "EN Descrizione Conseguire obiettivi",
+  "skills.soft06.desc": "EN Descrizione Simpatia",
+  "skills.code01.desc": "EN Descrizione 1",
+  "skills.code02.desc": "EN Descrizione 2",
+  "skills.code03.desc": "EN Descrizione 3",
+  "skills.code04.desc": "EN Descrizione 4",
+  "skills.code05.desc": "EN Descrizione 5",
+  "skills.code06.desc": "EN Descrizione 6",
+  "skills.code07.desc": "EN Descrizione 7",
+  "skills.code08.desc": "EN Descrizione 8",
+  "skills.code09.desc": "EN Descrizione 9",
+  "skills.code10.desc": "EN Descrizione 10",
+  "skills.code11.desc": "EN Descrizione 11",
+  "skills.code12.desc": "EN Descrizione 12"
 }
