--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -3,5 +3,29 @@
   "welcome.subtitle": "Bene, ecco quello che c'è da sapere ...",
   "welcome.aboutme": "<p>Sono uno sviluppatore a cui piace sviluppare per lo più con linguaggi e/o framework front-end. Sto lavorando principalmente con Angular 2+ e ho sviluppato questo sito in React giusto per cambiare un pò.</p><p>Lavoro in NTT DATA a Napoli dal giugno 2020, questa è stata la mia prima esperienza lavorativa da informatico.</p><p>Prima di cominciare a lavora ho studiato Informatica presso l'Università degli Studi di Salerno dove ho conseguito Laurea Magistrale.</p><p>Attualmente gli argomenti che mi interessano di più sono le metodologie Agile, in particolare il framework Scrum, e lo sviluppo front-end cercando di non fossilizzarmi troppo sul codice ma cercando di curare anche la UI e la UX di ciò che sviluppo.</p>",
   "header.title": "Francesco Vicidomini",
-  "header.download.cv": "Download CV"
+  "header.download.cv": "Download CV",
+  "skills.soft01": "Proattività",
+  "skills.soft02": "Problem solving",
+  "skills.soft03": "Team work",
+  "skills.soft04": "Comunicazione",
+  "skills.soft05": "Conseguire obiettivi",
+  "skills.soft06": "Simpatia",
+  "skills.soft01.desc": "Descrizione Proattività",
+  "skills.soft02.desc": "Descrizione Problem solving",
+  "skills.soft03.desc": "Descrizione Team work",
+  "skills.soft04.desc": "Descrizione Comunicazione",
+  "skills.soft05.desc": "Descrizione Conseguire obiettivi",
+  "skills.soft06.desc": "Descrizione Simpatia",
+  "skills.code01.desc": "Descrizione 1",
+  "skills.code02.desc": "Descrizione 2",
+  "skills.code03.desc": "Descrizione 3",
+  "skills.code04.desc": "Descrizione 4",
+  "skills.code05.desc": "Descrizione 5",
+  "skills.code06.desc": "Descrizione 6",
+  "skills.code07.desc": "Descrizione 7",
+  "skills.code08.desc": "Descrizione 8",
+  "skills.code09.desc": "Descrizione 9",
+  "skills.code10.desc": "Descrizione 10",
+  "skills.code11.desc": "Descrizione 11",
+  "skills.code12.desc": "Descrizione 12"
 }
