--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -29,5 +29,40 @@
   "skills.code09.desc": "EN Descrizione 9",
   "skills.code10.desc": "EN Descrizione 10",
   "skills.code11.desc": "EN Descrizione 11",
-  "skills.code12.desc": "EN Descrizione 12"
+  "skills.code12.desc": "EN Descrizione 12",
+  "project.title": "EN Progetti",
+  "project.pab.title": "EN PAB",
+  "project.pab.desc": "EN PAB bla bla bla",
+  "project.evocinema.title": "EN EvoCinema",
+  "project.evocinema.desc": "EN In questo progetto insieme al mio collega <a href='https://github.com/fdavino' target='_blank' rel='noreferrer'>Ferdinando D'avino</a> ho fatto una esperienza di management coordinando un team di 12 ragazzi con lo scopo di realizzare la migrazione web di un vecchio progetto sviluppato in Java SE.",
+  "project.evocinema.repo": "https://github.com/CiccioTecchio/evocinema",
+  "project.britishFanta.title": "EN BritishFanta",
+  "project.britishFanta.desc": "EN BritishFanta è una piattaforma web sviluppata come progetto per l'esame di Basi di Dati 2. Questa piattaforma si occupa di gestiore il fantacalcio della lega inglese dell'anno 2017/2018, è stat realizzata utilizzando MongoDB e Node.js.",
+  "project.britishFanta.repo": "https://github.com/CiccioTecchio/BritishFanta",
+  "project.n-body.title": "EN n-Body simulation",
+  "project.n-body.desc": "EN Progetto sviluppato per l'esame di Programmazione Concorrente e Parallela su Cloud. In questo progetto è stato parallelizzato uno script C che svolgeva la n-body simulation. Una volta parallelizzato il progetto è stato eseguito su un cluster AWS.",
+  "project.n-body.repo": "https://github.com/CiccioTecchio/n-Body_MPI",
+  "project.sharerasmus.title": "EN SharErasmus",
+  "project.sharerasmus.desc": "EN In questo progetto insieme al mio collega <a href='https://github.com/Alucard9994' target='_blank' rel='noreferrer'>Federico Vitale</a> ho fatto la mia seconda esperienza di management coordinando un team di 8 ragazzi con lo scopo di realizzare una piattaforma web per permettere ai coordinatori Erasmus di tenere traccia dei documenti e dello stato degli studenti che coordinano.",
+  "project.sharerasmus.repo": "https://github.com/CiccioTecchio/SharErasmus",
+  "project.yaspl.title": "EN YASPL",
+  "project.yaspl.desc": "EN YASPL è un altro semplice linguaggio di programmazione(Yet Another Simple Programming Language) questo progetto è stato realizzato per l'esame di Compilatori. Per il linguaggio YASPL3 è stato sviluppato solo il compilatore front-end realizzato utilizzando JavaCup.",
+  "project.yaspl.repo": "https://github.com/CiccioTecchio/YASPL3.0",
+  "project.carevent.title": "EN CarEvent",
+  "project.carevent.desc": "EN CarEvent è un app cross-platform sviluppata per l'esame di Enterprise Mobile Application Development in collaborazione con <a href='https://atos.net/it/italia'>Atos</a>. Questa app realizzata in Ionic Cordova e Firebase permette ai manager e ai venditori di partecipare e avere informazioni riguardo i corsi di formazione da seguire.",
+  "project.thesis1.title": "EN Tesi triennale",
+  "project.thesis1.desc": "EN Un pò di abstract",
+  "project.thesis1.repo": "https://github.com/CiccioTecchio/simrankJava",
+  "project.thesis2.title": "EN Tesi magistrale",
+  "project.thesis2.desc": "EN Un pò di abstract",
+  "project.thesis2.repo": "https://github.com/CiccioTecchio/Knoxly/tree/f-vicido",
+  "project.cicciotecchio-io.title": "EN Cicciotecchio.io",
+  "project.cicciotecchio-io.desc": "EN Un pò di descrizione",
+  "project.cicciotecchio-io.repo": "https://github.com/CiccioTecchio/CiccioTecchio.io",
+  "project.unisa-latex.title": "EN Unisa-LaTeX",
+  "project.unisa-latex.desc": "EN Un pò di descrizione",
+  "project.unisa-latex.repo": "https://github.com/CiccioTecchio/Unisa-LaTeX",
+  "project.my-piggy-bank.title": "EN MyPiggyBank",
+  "project.my-piggy-bank.desc": "EN Un pò di descrizione",
+  "project.my-piggy-bank.repo": "https://github.com/CiccioTecchio/MyPiggyBank"
 }
