lang - refs #8 added en

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,68 +1,65 @@
 {
-  "welcome.title": "EN Probabilmente se sei qui vuol dire che o mi conosci e vuoi vedere come ho fatto il sito, o vuoi conoscermi",
-  "welcome.subtitle": "EN Bene, ecco quello che c'è da sapere ...",
-  "welcome.aboutme": "<p>EN Sono uno sviluppatore a cui piace sviluppare per lo più con linguaggi e/o framework front-end. Sto lavorando principalmente con Angular 2+ e ho sviluppato questo sito in React giusto per cambiare un pò.</p><p>Lavoro in NTT DATA a Napoli dal giugno 2020, questa è stata la mia prima esperienza lavorativa da informatico.</p><p>Prima di cominciare a lavora ho studiato Informatica presso l'Università degli Studi di Salerno dove ho conseguito Laurea Magistrale.</p><p>Attualmente gli argomenti che mi interessano di più sono le metodologie Agile, in particolare il framework Scrum, e lo sviluppo front-end cercando di non fossilizzarmi troppo sul codice ma cercando di curare anche la UI e la UX di ciò che sviluppo.</p>",
+  "welcome.title": "Probably if you are here it means that either you know me and want to see how I made the site, or you want to get to know me",
+  "welcome.subtitle": "Well, here's what you need to know ...",
+  "welcome.aboutme": "<p>I am a front-end developer who has been working at NTT DATA in Naples since June 2020.</p><p>Before I started working I studied Computer Science at the University of Salerno where I obtained a Master's degree. </p><p>Currently the topics I'm most interested in are Agile methodologies, in particular the Scrum framework, and front-end development, trying not to focus too much on the code but also trying to take care of the UI and UX of what I develop.</p><p>My passions are going to the gym to work out 🏋️ and riding 🏍💨.</p>",
   "header.title": "Francesco Vicidomini",
   "header.download.cv": "Download CV",
   "skills.soft": "Soft skills",
-  "skills.soft01": "EN Proattività",
-  "skills.soft02": "EN Problem solving",
-  "skills.soft03": "EN Team work",
-  "skills.soft04": "EN Comunicazione",
-  "skills.soft05": "EN Conseguire obiettivi",
-  "skills.soft06": "EN Simpatia",
-  "skills.soft01.desc": "EN Descrizione Proattività",
-  "skills.soft02.desc": "EN Descrizione Problem solving",
-  "skills.soft03.desc": "EN Descrizione Team work",
-  "skills.soft04.desc": "EN Descrizione Comunicazione",
-  "skills.soft05.desc": "EN Descrizione Conseguire obiettivi",
-  "skills.soft06.desc": "EN Descrizione Simpatia",
+  "skills.soft01": "Proactivity",
+  "skills.soft02": "Problem solving",
+  "skills.soft03": "Team work",
+  "skills.soft04": "Communication",
+  "skills.soft05": "Achieving objectives",
+  "skills.soft06": "Sympathy",
+  "skills.soft01.desc": "I am always trying to improve myself",
+  "skills.soft02.desc": "Difficulties do not stop me, but I try to find a solution to the problem",
+  "skills.soft03.desc": "I like working with others and learning from the experience of others",
+  "skills.soft04.desc": "I can empathise with interlocutors",
+  "skills.soft05.desc": "I try to achieve the goals I set myself and gain experience from the effort I put in to achieve them",
+  "skills.soft06.desc": "I'll let you be the judge 😊",
   "skills.code": "Code skills",
-  "skills.code01.desc": "EN Descrizione 1",
-  "skills.code02.desc": "EN Descrizione 2",
-  "skills.code03.desc": "EN Descrizione 3",
-  "skills.code04.desc": "EN Descrizione 4",
-  "skills.code05.desc": "EN Descrizione 5",
-  "skills.code06.desc": "EN Descrizione 6",
-  "skills.code07.desc": "EN Descrizione 7",
-  "skills.code08.desc": "EN Descrizione 8",
-  "skills.code09.desc": "EN Descrizione 9",
-  "skills.code10.desc": "EN Descrizione 10",
-  "skills.code11.desc": "EN Descrizione 11",
-  "skills.code12.desc": "EN Descrizione 12",
-  "project.title": "EN Progetti",
-  "project.pab.title": "EN PAB",
-  "project.pab.desc": "EN PAB bla bla bla",
-  "project.evocinema.title": "EN EvoCinema",
-  "project.evocinema.desc": "EN In questo progetto insieme al mio collega <a href='https://github.com/fdavino' target='_blank' rel='noreferrer'>Ferdinando D'avino</a> ho fatto una esperienza di management coordinando un team di 12 ragazzi con lo scopo di realizzare la migrazione web di un vecchio progetto sviluppato in Java SE.",
+  "skills.code01.desc": "More than 2 years of experience, I started using it at work on the PAB project",
+  "skills.code02.desc": "Most of my web projects use Bootstrap, I started using it at university",
+  "skills.code03.desc": "JS and especially TS are the languages I use most, I started studying them as a self-taught student and have used several frameworks",
+  "skills.code04.desc": "I also started using node at university along with sequlize, mongoose, express and other frameworks",
+  "skills.code05.desc": "1 year of experience, I have used it mainly on private projects. This site is made in React",
+  "skills.code06.desc": "I like to use it and try to optimise branch management, one thing I am curious about is git flows",
+  "skills.code07.desc": "I have been working and studying db since my early years at university, the DBMSs I have used are MySQL, Apache Derby, MongoDb, Neo4j",
+  "skills.code08.desc": "It was the programming language with which I applied the principles of object-oriented programming, I also used frameworks such as Spring Boot and Spring Data Neo4j",
+  "skills.code09.desc": "I used Python to realise my master's thesis project",
+  "skills.code10.desc": "I am good at searching, copying and pasting code from OS",
+  "skills.code11.desc": "I used RDS and EC2 to deploy some apps",
+  "skills.code12.desc": "When I can, I develop Bash scripts that simplify my work",
+  "project.title": "Projects",
+  "project.pab.title": "PAB goes digital",
+  "project.pab.desc": "I have been working on the PAB project since I joined NTT DATA (June 2020), here I maintain and develop components, modules and services in Angular for the PAB platform.",
+  "project.evocinema.title": "EvoCinema",
+  "project.evocinema.desc": "In this project, together with my colleague <a href='https://github.com/fdavino' target='_blank' rel='noreferrer'>Ferdinando D'avino</a>, I gained management experience by coordinating a team of 12 students with the aim of realising the web migration of an old project developed in Java SE.",
   "project.evocinema.repo": "https://github.com/CiccioTecchio/evocinema",
-  "project.britishFanta.title": "EN BritishFanta",
-  "project.britishFanta.desc": "EN BritishFanta è una piattaforma web sviluppata come progetto per l'esame di Basi di Dati 2. Questa piattaforma si occupa di gestiore il fantacalcio della lega inglese dell'anno 2017/2018, è stat realizzata utilizzando MongoDB e Node.js.",
+  "project.britishFanta.title": "BritishFanta",
+  "project.britishFanta.desc": "BritishFanta is a web platform developed as a project for the Databases 2 exam. This platform deals with the management of the English league fantasy football of the year 2017/2018, it was built using MongoDB and Node.js.",
   "project.britishFanta.repo": "https://github.com/CiccioTecchio/BritishFanta",
-  "project.n-body.title": "EN n-Body simulation",
-  "project.n-body.desc": "EN Progetto sviluppato per l'esame di Programmazione Concorrente e Parallela su Cloud. In questo progetto è stato parallelizzato uno script C che svolgeva la n-body simulation. Una volta parallelizzato il progetto è stato eseguito su un cluster AWS.",
+  "project.n-body.title": "N-Body simulation",
+  "project.n-body.desc": "Project developed for the Concurrent and Parallel Programming on the Cloud examination. In this project, a C script that performed n-body simulation was parallelised. Once parallelised, the project was run on an AWS cluster.",
   "project.n-body.repo": "https://github.com/CiccioTecchio/n-Body_MPI",
-  "project.sharerasmus.title": "EN SharErasmus",
-  "project.sharerasmus.desc": "EN In questo progetto insieme al mio collega <a href='https://github.com/Alucard9994' target='_blank' rel='noreferrer'>Federico Vitale</a> ho fatto la mia seconda esperienza di management coordinando un team di 8 ragazzi con lo scopo di realizzare una piattaforma web per permettere ai coordinatori Erasmus di tenere traccia dei documenti e dello stato degli studenti che coordinano.",
+  "project.sharerasmus.title": "SharErasmus",
+  "project.sharerasmus.desc": "In this project, together with my colleague <a href='https://github.com/Alucard9994' target='_blank' rel='noreferrer'>Federico Vitale</a>, I gained my second management experience by coordinating a team of 8 students with the aim of setting up a web platform to enable Erasmus coordinators to keep track of the documents and status of the students they coordinate.",
   "project.sharerasmus.repo": "https://github.com/CiccioTecchio/SharErasmus",
-  "project.yaspl.title": "EN YASPL",
-  "project.yaspl.desc": "EN YASPL è un altro semplice linguaggio di programmazione(Yet Another Simple Programming Language) questo progetto è stato realizzato per l'esame di Compilatori. Per il linguaggio YASPL3 è stato sviluppato solo il compilatore front-end realizzato utilizzando JavaCup.",
+  "project.yaspl.title": "YASPL",
+  "project.yaspl.desc": "YASPL is Yet Another Simple Programming Language this project was realised for the Compilers exam. For the YASPL3 language, only the front-end compiler was developed using JavaCup.",
   "project.yaspl.repo": "https://github.com/CiccioTecchio/YASPL3.0",
-  "project.carevent.title": "EN CarEvent",
-  "project.carevent.desc": "EN CarEvent è un app cross-platform sviluppata per l'esame di Enterprise Mobile Application Development in collaborazione con <a href='https://atos.net/it/italia'>Atos</a>. Questa app realizzata in Ionic Cordova e Firebase permette ai manager e ai venditori di partecipare e avere informazioni riguardo i corsi di formazione da seguire.",
-  "project.thesis1.title": "EN Tesi triennale",
-  "project.thesis1.desc": "EN Un pò di abstract",
+  "project.carevent.title": "CarEvent",
+  "project.carevent.desc": "CarEvent is a cross-platform app developed for the Enterprise Mobile Application Development exam in cooperation with <a href='https://atos.net/it/italia'>Atos</a>. This app built in <a href='https://ionicframework.com/' target='_blank'>Ionic</a> <a href='https://cordova.apache.org/' target='_blank'>Cordova</a> e <a href='https://firebase.google.com/' target='_blank'>Firebase</a> allows managers and salespeople to participate and get information about the training courses to follow.",
+  "project.thesis1.title": "Crimeminer - Bachelor's thesis",
+  "project.thesis1.desc": "Implementation of simRank and simRank algorithms on bipartite graphs. These algorithms were used to measure the similarities between the nodes of the criminal network in the Crimeminer project.The technologies used were <a href='https://jquery.com/' target='_blank'>JQuery</a> and <a href='https://www.highcharts.com/' target='_blank'>Highcharts</a> for the graphics and UI, <a href='https://neo4j.com/' target='_blank'>Neo4j</a> for the graph database and <a href='https://spring.io/projects/spring-data-neo4j' target='_blank'>Spring Data Neo4j</a> for the server.<p>Link to article: <a href='https://www.researchgate.net/publication/324799328_Ex_Machina_Analytical_platforms_Law_and_the_Challenges_of_Computational_Legal_Science' target='_blank'>Ex Machina: Analytical platforms, Law and the Challenges of Computational Legal Science</a>.</p>",
   "project.thesis1.repo": "https://github.com/CiccioTecchio/simrankJava",
-  "project.thesis2.title": "EN Tesi magistrale",
-  "project.thesis2.desc": "EN Un pò di abstract",
+  "project.thesis2.title": "Knoxly - Master's thesis",
+  "project.thesis2.desc": "Development of an AI that can recognise whether a sentence belongs to one of these five topics: politics, health, work, travel and others. Knoxly's AI was realised using <a href='https://www.tensorflow.org/hub/tutorials/semantic_similarity_with_tf_hub_universal_encoder' target='_blank'>Universal Sentence Encoder</a>, it was integrated within the Chrome Knoxly plugin and notifies the user when he/she is writing a sentence belonging to one of the previously mentioned topics on Telegram or Gmail. <p>Link to the thesis: <a href='https://github.com/CiccioTecchio/MasterThesis' target='_blank'>Using semantic analysis techniques to avoid privacy leakage</a>.</p>",
   "project.thesis2.repo": "https://github.com/CiccioTecchio/Knoxly/tree/f-vicido",
-  "project.cicciotecchio-io.title": "EN Cicciotecchio.io",
-  "project.cicciotecchio-io.desc": "EN Un pò di descrizione",
+  "project.cicciotecchio-io.title": "Cicciotecchio.dev",
+  "project.cicciotecchio-io.desc": "This website 😊",
   "project.cicciotecchio-io.repo": "https://github.com/CiccioTecchio/CiccioTecchio.io",
-  "project.unisa-latex.title": "EN Unisa-LaTeX",
-  "project.unisa-latex.desc": "EN Un pò di descrizione",
-  "project.unisa-latex.repo": "https://github.com/CiccioTecchio/Unisa-LaTeX",
-  "project.my-piggy-bank.title": "EN MyPiggyBank",
-  "project.my-piggy-bank.desc": "EN Un pò di descrizione",
-  "project.my-piggy-bank.repo": "https://github.com/CiccioTecchio/MyPiggyBank"
+  "project.unisa-latex.title": "Unisa-LaTeX",
+  "project.unisa-latex.desc": "I felt the need to create my own template in LaTeX in order to write my thesis. I am proud of this project because it proved useful for several university colleagues.",
+  "project.unisa-latex.repo": "https://github.com/CiccioTecchio/Unisa-LaTeX"
 }
